# brazilian_e-commerce_project

./: .gitignore  README.md  customizations.sh  docker-compose.yml  dockerfile  pyproject.toml
config/: .env
docs/Readmes_uteis/: README_comandos.md  README_docker_compose.md  README_dockerfile.md
notebooks/01_exploration/: 01_exploracao.ipynb
notebooks/0_Data_Preparation/: 0_data_prep_db.ipynb
notebooks/Data_Preparation/: 0_data_prep_sql.ipynb
tests/: Teste_ambiente_spark.ipynb  teste.sql  teste_connexao_pyspark_sql.ipynb
utils/: db_config.py
